--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<div class="jumbotron text-center">
 	  <h1>WDI SF: Summer 2014</h1>
-	  <h3>Notes, Blog Posts and Resources from the Summer Cohort!</h3>
+	  <h3>Notes, Blog Posts and Resources for the Summer Cohort!</h3>
 	</div>
 	<div class="container content-wrapper">
 		<div class="row">
