--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
 				</div>
 			</div><!-- /.col -->
 			<aside class="sidebar col-sm-4">
-				<h3>Sidebar</h3>
+				<h3>Notes</h3>
 				<ul>
 					<li><a href="https://github.com/wdi-sf-march-2014">Notes from the March cohort</a></li>
+				</ul>
+				<h3>Resources</h3>
+				<ul>
+					<li><a href="http://frontendbabel.info/articles/webpage-rendering-101/">What Every Frontend Developer Should Know About Webpage Rendering</a></li>
+					<li><a href="http://learn.jquery.com/performance/optimize-selectors/">JQuery - Performance Optimize Selectors</a></li>
+					<li><a href="http://www.phpied.com/rendering-repaint-reflowrelayout-restyle/">Browser Rendering, Repaint, Reflow, Relayout and Restyle</a></li>
 				</ul>
 			</aside>
 		</div><!-- /.row -->
