removed post slug from the post title

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<div class="img-wrapper">
 									<a href="{{ post.post_url }}"><img src="{{ post.photos[0].alt_sizes[5].url }}"></a>
 								</div>
-								<h3><a href="{{ post.post_url }}">{{ post.title }} {{ post.slug }}</a></h3>
+								<h3><a href="{{ post.post_url }}">{{ post.title }}</a></h3>
 								<div class="meta">
 									<p>from <a href="{{ post.post_url }}">{{ post.blog_name }}.tumblr.com</a></p>
 									<p>{{ post.date }}</p>
