added angular resources

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
 					<li><a href="http://learn.jquery.com/performance/optimize-selectors/">JQuery - Performance Optimize Selectors</a></li>
 					<li><a href="http://www.phpied.com/rendering-repaint-reflowrelayout-restyle/">Browser Rendering, Repaint, Reflow, Relayout and Restyle</a></li>
 				</ul>
+				<h4>Angular Resources</h4>
+				<ul>
+					<li><a href="http://www.ng-newsletter.com/posts/beginner2expert-how_to_start.html">From Beginner to Expert in 7 Steps</a></li>
+					<li><a href="http://leftshift.io/8-tips-for-angular-js-beginners/">8 Tips for Angular JS Beginners</a></li>
+					<li><a href="http://deansofer.com/posts/view/14/AngularJs-Tips-and-Tricks-UPDATED">Angular Tips and Tricks</a></li>
+				</ul>
 			</aside>
 		</div><!-- /.row -->
 	</div><!-- /.content-wrapper -->
