disabled captions for now

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<p>from <a href="{{ post.post_url }}">{{ post.blog_name }}.tumblr.com</a></p>
 									<p>{{ post.date }}</p>
 								</div>
-								<div class="content" ng-bind-html-unsafe="post.caption">{{ post.caption }}</div>
+								<!--div class="content" ng-bind-html-unsafe="post.caption">{{ post.caption }}</div-->
 							</div>
 						</li>
 					</ul>
