disabled add my blog button till it's ready

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		        <!--li class="active"><a href="#">Link</a></li>
 		        <li><a href="#">Link</a></li-->
 		      </ul>
-		      <button class="btn btn-primary btn-md navbar-btn pull-right" data-toggle="modal" data-target="#add-blog">
+		      <!--button class="btn btn-primary btn-md navbar-btn pull-right" data-toggle="modal" data-target="#add-blog">
 				Add my blog!
-			  </button>
+			  </button-->
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
