added more resources

--- a/index.html
+++ b/index.html
@@ -97,10 +97,20 @@
 					<li><a href="https://github.com/wdi-sf-march-2014">Notes from the March cohort</a></li>
 				</ul>
 				<h3>Resources</h3>
+				<h4>General Javascript</h4>
+				<ul>
+					<li><a href="http://javascript.crockford.com/code.html">Douglas Crockford JS Style Guide</a></li>
+					<li><a href="https://github.com/airbnb/javascript/blob/master/README.md#airbnb-javascript-style-guide-">AirBnB JS Style Guide</a></li>
+					<li><a href="http://coderbyte.com/">Coderbyte - Javascript Exercises</a></li>
+				</ul>
+
+				<h4>Browser Rendering</h4>
 				<ul>
 					<li><a href="http://frontendbabel.info/articles/webpage-rendering-101/">What Every Frontend Developer Should Know About Webpage Rendering</a></li>
 					<li><a href="http://learn.jquery.com/performance/optimize-selectors/">JQuery - Performance Optimize Selectors</a></li>
 					<li><a href="http://www.phpied.com/rendering-repaint-reflowrelayout-restyle/">Browser Rendering, Repaint, Reflow, Relayout and Restyle</a></li>
+					<li><a href="http://caniuse.com/">Can I Use...?</a></li>
+					<li><a href="http://kangax.github.io/compat-table/es5/">ECMAScript 5 Compatibility Table</a></li>
 				</ul>
 				<h4>Angular Resources</h4>
 				<ul>
