added WDI SF July Notes and Delmer's gists

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 			<aside class="sidebar col-sm-4">
 				<h3>Notes</h3>
 				<ul>
+					<li><a href="https://github.com/wdi-sf-july">WDI SF Summer 2014 Notes</a></li>
+					<li><a href="https://gist.github.com/DelmerGA/">Delmer's Gists</a></li>
 					<li><a href="https://github.com/wdi-sf-march-2014">Notes from the March cohort</a></li>
 				</ul>
 				<h3>Resources</h3>
