added back to top button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</nav>
 	</header>
 
-	<div class="jumbotron text-center">
+	<div id="top" class="jumbotron text-center">
 	  <h1>WDI SF: Summer 2014</h1>
 	  <h3>Notes, Blog Posts and Resources for the Summer Cohort!</h3>
 	</div>
@@ -124,6 +124,8 @@
 			</aside>
 		</div><!-- /.row -->
 	</div><!-- /.content-wrapper -->
+
+	<a type="button" id="top-btn" class="btn btn-default top-btn" href="#top">&#94; Top</a>
 	
 	<!-- modals -->
 	<div id="add-blog" class="modal fade">
